// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"const map: Map<string, number> = new Map();
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ The generic type arguments should be specified as part of the constructor type arguments.
const set: Set<string> = new Set();
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ The generic type arguments should be specified as part of the constructor type arguments.
"
`;

exports[` 2`] = `
"const map = new Map<string, number>();
const map: Map<string, number> = new MyMap();
const set = new Set<string>();
const set = new Set();
const set: Set<string> = new Set<string>();
"
`;

exports[` 3`] = `
"const map = new Map<string, number>();
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ The generic type arguments should be specified as part of the type annotation.
const set = new Set<string>();
      ~~~~~~~~~~~~~~~~~~~~~~~ The generic type arguments should be specified as part of the type annotation.
"
`;

exports[` 4`] = `
"const map: Map<string, number> = new Map();
const set: Set<string> = new Set();
const set = new Set();
const set: Set<string> = new Set<string>();
"
`;
